# miniClaudeCode

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml
.miniclaudecode/: settings.json
.miniclaudecode/commands/: audit.md
.miniclaudecode/skills/: python-review.md
docs/: README.md  architecture.md  flow-diagrams.md  implementation-plan.md  interview-qa.md  technical-details.md
evals/: README.md  __init__.py  runner.py
evals/swebench/: README.md  __init__.py  analyze_failures.py  run_swebench.py  summarize_reports.py
evals/tasks/: create_greet.yaml  fix_off_by_one.yaml  implement_slugify.yaml
miniclaudecode/: __init__.py  agent_loop.py  cli.py  config.py  context.py  permissions.py  settings.py  system_prompt.py  telemetry.py
miniclaudecode/hooks/: __init__.py  runner.py
miniclaudecode/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_compat.py
miniclaudecode/persistence/: __init__.py  session.py
miniclaudecode/skills/: __init__.py  loader.py
miniclaudecode/slash/: __init__.py  loader.py
miniclaudecode/subagent/: __init__.py  runner.py
miniclaudecode/tools/: __init__.py  base.py  bash_tool.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  skill_tool.py  task_tool.py  todo_write.py  web_fetch.py
tests/: test_agent_loop.py  test_compaction.py  test_context.py  test_diff_preview.py  test_evals.py  test_hooks.py  test_openai_compat.py  test_parallel_dispatch.py  test_permissions.py  test_persistence.py  test_profiles_env.py  test_settings.py  test_skill_loader.py  test_skill_tool.py  test_slash_commands.py  test_subagent.py  test_swebench_adapter.py  test_system_prompt.py  test_telemetry.py  test_todo_write.py  test_tools.py
