[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaudecode"
version = "0.1.0"
description = "Enhanced miniClaudeCode -- learning fork with subagent / parallel / skill systems"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "gjq00" }]
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# SWE-bench Lite adapter: `datasets` loads the tasks (stage 1). Scoring (stage 2)
# additionally needs `pip install swebench` + Docker -- kept out of here since it
# pulls heavy deps and isn't importable in-process.
swebench = ["datasets>=2.16"]

[project.scripts]
miniclaudecode = "miniclaudecode.cli:main"

[tool.setuptools.packages.find]
include = ["miniclaudecode*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
